# slidingright

./: LICENSE  README.md  markoventropy.hs  slidingright.cabal  slidingright.hs
