name:                slidingright
version:             0.1
synopsis:            Sliding right paper calculations
description:
  The two programs contained in this package were used in some of the
  calculations and plots for the paper “Sliding Right Into Disaster”.
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          joachim@cis.upenn.edu
build-type:          Simple
cabal-version:       >=1.10

executable slidingright
  main-is:             slidingright.hs
  build-depends:       base >=4.9 && <4.10,
                       statistics ==0.13.*,
                       QuickCheck ==2.8.*,
                       containers ==0.5.*,
                       arithmoi == 0.4.*,
                       optparse-applicative == 0.13.*,
                       random == 1.1.*,
                       vector == 0.11.*,
                       split == 0.2.*
  default-language:    Haskell2010

executable markoventropy
  main-is:             markoventropy.hs
  build-depends:       base >=4.9 && <4.10,
                       statistics ==0.13.*,
                       QuickCheck ==2.8.*,
                       containers ==0.5.*,
                       arithmoi == 0.4.*,
                       optparse-applicative == 0.13.*,
                       random == 1.1.*,
                       vector == 0.11.*,
                       hmatrix == 0.18.*
  default-language:    Haskell2010
